--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "file-loader": "^6.2.0",
-    "node-sass": "^5.0.0",
+    "sass": "^1.43.5",
     "sass-loader": "^11.0.1",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
