--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "ts-boiler",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack serve",
-    "build": "webpack"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "file-loader": "^6.2.0",
-    "sass": "^1.43.5",
-    "sass-loader": "^11.0.1",
-    "ts-loader": "^8.0.14",
-    "typescript": "^4.1.3",
-    "webpack": "^5.12.2",
-    "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^3.11.1"
-  }
+    "name": "ts-boiler",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "webpack serve",
+        "build": "webpack --config webpack.prod.config.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "copy-webpack-plugin": "^11.0.0",
+        "css-loader": "^6.7.3",
+        "file-loader": "^6.2.0",
+        "html-webpack-plugin": "^5.5.0",
+        "mini-css-extract-plugin": "^2.7.2",
+        "sass": "^1.43.5",
+        "sass-loader": "^11.0.1",
+        "style-loader": "^3.3.1",
+        "ts-loader": "^8.0.14",
+        "typescript": "^4.1.3",
+        "webpack": "^5.12.2",
+        "webpack-cli": "^4.10.0",
+        "webpack-dev-server": "^3.11.1",
+        "webpack-manifest-plugin": "^5.0.0"
+    }
 }
